# gcp-python-function-template

./: cookiecutter.json
{{ cookiecutter.project_slug }}/: .gcloudignore  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/function/: config.py  main.py
{{ cookiecutter.project_slug }}/function/decorators/: __init__.py  env_parameter.py  secret_parameter.py
{{ cookiecutter.project_slug }}/scripts/: gpc_deploy.sh  terraform_deploy.sh
{{ cookiecutter.project_slug }}/terraform/: main.tf  outputs.tf  variables.tf
{{ cookiecutter.project_slug }}/tests/integration/: test_integration.py
{{ cookiecutter.project_slug }}/tests/unit/: test_main.py
