[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
functions-framework = "^{{ cookiecutter.functions_framework_version }}"


[tool.poetry.group.dev.dependencies]
pytest = "^{{ cookiecutter.pytest_version }}"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
